cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_globs_a_star_cmp_a_a_star.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/globs\").arg(\"analyze\").arg(\"compare\").arg(\"a_star.cedar\").arg(\"a_a_star.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+-------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                              |
+---------------+------------+--------------+-------------------------------------+
| User          | view       | Thing        | pset1 is more permissive than pset2 |
+---------------+------------+--------------+-------------------------------------+
