cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_globs_a_star_cmp_a_star_non_a.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/globs\").arg(\"analyze\").arg(\"compare\").arg(\"a_star.cedar\").arg(\"a_star_non_a.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+---------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                    |
+---------------+------------+--------------+---------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is more permissive than pset2                                       |
|               |            |              | Example: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: {                                                                |
|               |            |              |   str1: "a",                                                              |
|               |            |              |   str2: "A",                                                              |
|               |            |              | }                                                                         |
|               |            |              | entities: [                                                               |
|               |            |              |   Action::"view",                                                         |
|               |            |              |   Thing::"",                                                              |
|               |            |              |   User::"",                                                               |
|               |            |              | ]                                                                         |
+---------------+------------+--------------+---------------------------------------------------------------------------+
