cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_globs_star_a_cmp_star_b.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/globs\").arg(\"analyze\").arg(\"compare\").arg(\"star_a.cedar\").arg(\"star_b.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                                                   |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is incomparable with pset2                                                                         |
|               |            |              | Example where pset1 is more permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: {                                                                                               |
|               |            |              |   str1: "a",                                                                                             |
|               |            |              |   str2: "A",                                                                                             |
|               |            |              | }                                                                                                        |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"",                                                                                             |
|               |            |              |   User::"",                                                                                              |
|               |            |              | ]                                                                                                        |
|               |            |              |                                                                                                          |
|               |            |              | Example where pset1 is less permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: {                                                                                               |
|               |            |              |   str1: "b",                                                                                             |
|               |            |              |   str2: "A",                                                                                             |
|               |            |              | }                                                                                                        |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"",                                                                                             |
|               |            |              |   User::"",                                                                                              |
|               |            |              | ]                                                                                                        |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
