cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_misc1.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/misc\").arg(\"analyze\").arg(\"compare\").arg(\"src1.cedar\").arg(\"tgt1.cedar\").arg(\"policies1.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+-----------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P1            | edit       | R1           | pset1 is more permissive than pset2                                   |
|               |            |              | Example: principal: P1::"A", action: Action::"edit", resource: R1::"" |
|               |            |              | entities: [                                                           |
|               |            |              |   Action::"edit",                                                     |
|               |            |              |   Action::"view",                                                     |
|               |            |              |   P1::"A",                                                            |
|               |            |              |   R1::"",                                                             |
|               |            |              | ]                                                                     |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P1            | edit       | R2           | pset1 is less permissive than pset2                                   |
|               |            |              | Example: principal: P1::"", action: Action::"edit", resource: R2::""  |
|               |            |              | entities: [                                                           |
|               |            |              |   Action::"edit",                                                     |
|               |            |              |   Action::"view",                                                     |
|               |            |              |   P1::"",                                                             |
|               |            |              |   P1::"A",                                                            |
|               |            |              |   R2::"",                                                             |
|               |            |              | ]                                                                     |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P1            | view       | R1           | pset1 is more permissive than pset2                                   |
|               |            |              | Example: principal: P1::"A", action: Action::"view", resource: R1::"" |
|               |            |              | entities: [                                                           |
|               |            |              |   Action::"edit",                                                     |
|               |            |              |   Action::"view",                                                     |
|               |            |              |   P1::"A",                                                            |
|               |            |              |   R1::"",                                                             |
|               |            |              | ]                                                                     |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P1            | view       | R2           | pset1 is more permissive than pset2                                   |
|               |            |              | Example: principal: P1::"A", action: Action::"view", resource: R2::"" |
|               |            |              | entities: [                                                           |
|               |            |              |   Action::"edit",                                                     |
|               |            |              |   Action::"view",                                                     |
|               |            |              |   P1::"A",                                                            |
|               |            |              |   R2::"",                                                             |
|               |            |              | ]                                                                     |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P2            | edit       | R1           | pset1 is equivalent to pset2                                          |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P2            | edit       | R2           | pset1 is less permissive than pset2                                   |
|               |            |              | Example: principal: P2::"", action: Action::"edit", resource: R2::""  |
|               |            |              | entities: [                                                           |
|               |            |              |   Action::"edit",                                                     |
|               |            |              |   Action::"view",                                                     |
|               |            |              |   P1::"A",                                                            |
|               |            |              |   P2::"",                                                             |
|               |            |              |   R2::"",                                                             |
|               |            |              | ]                                                                     |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P2            | view       | R1           | pset1 is equivalent to pset2                                          |
+---------------+------------+--------------+-----------------------------------------------------------------------+
| P2            | view       | R2           | pset1 is equivalent to pset2                                          |
+---------------+------------+--------------+-----------------------------------------------------------------------+
