cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_sets2.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/sets\").arg(\"analyze\").arg(\"compare\").arg(\"src2.cedar\").arg(\"tgt2.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+------------------------------+
| PrincipalType | ActionName | ResourceType | Result                       |
+---------------+------------+--------------+------------------------------+
| User          | view       | Thing        | pset1 is equivalent to pset2 |
+---------------+------------+--------------+------------------------------+
