cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_sets4.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/sets\").arg(\"analyze\").arg(\"compare\").arg(\"src4.cedar\").arg(\"tgt4.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+---------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                    |
+---------------+------------+--------------+---------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is more permissive than pset2                                       |
|               |            |              | Example: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: {                                                                |
|               |            |              |   n1: (-1),                                                               |
|               |            |              |   n2: (-1),                                                               |
|               |            |              |   ns: [],                                                                 |
|               |            |              |   thing1: Thing::"",                                                      |
|               |            |              |   thing2: Thing::"A",                                                     |
|               |            |              |   thing3: Thing::"",                                                      |
|               |            |              |   things: [Thing::""],                                                    |
|               |            |              |   things1: [Thing::"A"],                                                  |
|               |            |              |   things2: [Thing::"", Thing::"A"],                                       |
|               |            |              |   user1: User::"",                                                        |
|               |            |              |   user2: User::"A",                                                       |
|               |            |              |   users: [],                                                              |
|               |            |              | }                                                                         |
|               |            |              | entities: [                                                               |
|               |            |              |   Action::"view",                                                         |
|               |            |              |   Thing::"",                                                              |
|               |            |              |   Thing::"A",                                                             |
|               |            |              |   User::"",                                                               |
|               |            |              |   User::"A",                                                              |
|               |            |              | ]                                                                         |
+---------------+------------+--------------+---------------------------------------------------------------------------+
